# phongLighting

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  buildandrun.bat  buildandrundbg.bat  format.py  imgui.ini
assets/shaders/: cube.frag  cube.vert  helloTriangle.frag  helloTriangle.vert  lightCube.frag  lightCube.vert  phongLighting.frag  phongLighting.vert  texture.frag
img/: vid.mkv  vid.mov
lib/: CMakeLists.txt
lib/glfw/: CMakeLists.txt  cmake_install.cmake
lib/glfw/src/: cmake_install.cmake  glfw3.pc
lib/imgui/backends/: imgui_impl_vulkan.cpp
scripts/: build-clang.bat  build-msvc-dbg.bat  build-msvc-rel.bat  compileShaders.bat  config-clang-dbg.bat  config-clang-rel.bat  config-msvc.bat  cppcheck.bat  run-clang.bat  run-msvc-dbg.bat  run-msvc-rel.bat
src/: CMakeLists.txt  main.cpp
src/core/: KeyCodes.h  MouseButtonCodes.h  application.cpp  application.h  core.cpp  core.h  input.cpp  input.h  logger.cpp  logger.h  window.cpp  window.h
src/editor/: objects.cpp  objects.h  ubo.cpp  ubo.h
src/renderer/: camera.cpp  camera.h  commandBuffer.cpp  commandBuffer.h  commandPool.cpp  commandPool.h  descriptor.cpp  descriptor.h  descriptorSet.cpp  device.cpp  device.h  indexBuffer.cpp  indexBuffer.h  model.cpp  model.h  pipeline.cpp  pipeline.h  renderer.cpp  renderer.h  shader.cpp  shader.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  uniformBuffer.cpp  uniformBuffer.h  vertexBuffer.cpp  vertexBuffer.h  vulkanContext.cpp  vulkanContext.h
src/ui/: imGuiBuild.cpp  imGuiOverlay.cpp  imGuiOverlay.h
src/utils/: utils.cpp  utils.h
